# workaudit-ai

./: .gitignore  README.md  plan.md  pnpm-lock.yaml
docs/: evals.md  (+9 more)
services/local-agent/: pyproject.toml
services/local-agent/scripts/: evaluate_model.py
services/local-agent/src/worktrace_agent/: __init__.py  __main__.py
services/local-agent/src/worktrace_agent/ai/: embeddings.py  gemma_manifest.py  local_report_runtime.py  model_cache.py  qwen_embedding_runtime.py  qwen_vl_runtime.py  reporting.py  vision_analysis.py
services/local-agent/src/worktrace_agent/api/: ai_report_service.py  app.py  session_recorder_service.py
services/local-agent/src/worktrace_agent/capture/: active_window.py  audio_transcription.py  file_watcher.py  ocr_runtime.py  ocr_worker.py  (+3 more)
services/local-agent/tests/: test_active_window_recorder_worker.py  test_audio_embeddings.py  test_evidence_cited_report.py  test_file_and_terminal_capture.py  test_gemma_e2b_smoke_script.py  test_gemma_model_manifest.py  test_laptop_readiness_benchmark.py  test_local_report_runtime.py  test_model_cache.py  test_observability.py  test_ocr_runtime.py  test_packaging_entrypoint.py  test_portfolio_claim_discipline.py  test_privacy_controls.py  test_qwen_embedding_runtime.py  test_qwen_vl_runtime.py  test_screenshot_capture_worker.py  test_screenshot_sampler.py  test_selected_frame_vision_analysis.py  test_selective_ocr_worker.py  test_session_state_machine.py
services/local-agent/tests/api/: test_ai_report_routes.py  test_health.py  test_sessions.py
services/local-agent/tests/db/: test_migrations.py
(+39 files in other folders)
